Fix text visible on fields focus

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,6 @@ body {
     top: 0;
     left: 0;
     z-index: 99;
-    /*padding: 0 61px;*/
     justify-content: center;
 }
 
@@ -78,7 +77,7 @@ body {
 }
 
 h1 {
-    font-family: Vollkorn;
+    font-family: Vollkorn, "Arial", sans-serif;
     font-size: 38px;
     line-height: 1.11;
     margin: 0;
@@ -192,7 +191,7 @@ h1 {
 
 .what-is h2 {
     font-size: 32px;
-    font-family: Vollkorn;
+    font-family: Vollkorn, Arial, sans-serif;
     line-height: 1.75;
     text-align: center;
     color: #3a4549;
@@ -200,7 +199,7 @@ h1 {
 
 .outro h2 {
     font-size: 32px;
-    font-family: Vollkorn;
+    font-family: Vollkorn, Arial, sans-serif;
     line-height: 1.5;
     text-align: center;
     color: #212121;
@@ -299,21 +298,21 @@ h1 {
     0% {opacity: 0; top: 50%; }
     40% {opacity: 1; transform: rotate(25deg) ;}
     60% {transform: rotate(-15deg) translateX(-10px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 @keyframes purse-dol2 {
     0% {opacity: 0; top: 50%;}
     40% {opacity: 1; transform: rotate(30deg) ;}
     60% {transform: rotate(-10deg) translateX(10px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 @keyframes purse-dol3 {
     0% {opacity: 0; top: 50%;}
     40% {opacity: 1; transform: rotate(15deg) ;}
     60% {transform: rotate(-5deg) translateX(-5px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 .main-heart {
@@ -355,21 +354,21 @@ h1 {
     0% {opacity: 0; top: 50%; }
     40% {opacity: 1; transform: rotate(25deg) ;}
     60% {transform: rotate(-15deg) translateX(-10px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 @keyframes heart2 {
     0% {opacity: 0; top: 50%;}
     40% {opacity: 1; transform: rotate(30deg) ;}
     60% {transform: rotate(-10deg) translateX(10px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 @keyframes heart3 {
     0% {opacity: 0; top: 50%;}
     40% {opacity: 1; transform: rotate(15deg) ;}
     60% {transform: rotate(-5deg) translateX(-5px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 .knight {
@@ -411,21 +410,21 @@ h1 {
     0% {opacity: 0;  }
     40% {opacity: 1; transform: rotate(25deg) ;}
     60% {transform: rotate(-15deg) translateX(-10px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 @keyframes bubble2 {
     0% {opacity: 0; }
     40% {opacity: 1; transform: rotate(30deg) ;}
     60% {transform: rotate(-10deg) translateX(10px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 @keyframes bubble3 {
     0% {opacity: 0; }
     40% {opacity: 1; transform: rotate(15deg) ;}
     60% {transform: rotate(-5deg) translateX(-5px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 .glove {
@@ -518,21 +517,21 @@ h1 {
     0% {opacity: 0;  }
     40% {opacity: 1; transform: rotate(25deg) ;}
     60% {transform: rotate(-15deg) translateX(-10px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 @keyframes star2 {
     0% {opacity: 0; }
     40% {opacity: 1; transform: rotate(30deg) ;}
     60% {transform: rotate(-10deg) translateX(10px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 @keyframes star3 {
     0% {opacity: 0; }
     40% {opacity: 1; transform: rotate(15deg) ;}
     60% {transform: rotate(-5deg) translateX(-5px);}
-    100% {opacity: 0; top: 0%;}
+    100% {opacity: 0; top: 0;}
 }
 
 
@@ -555,7 +554,7 @@ h1 {
 }
 
 .rules-header {
-    font-family: Vollkorn;
+    font-family: Vollkorn, Arial, sans-serif;
     font-size: 32px;
     font-weight: bold;
     line-height: 1.75;
@@ -631,7 +630,7 @@ h1 {
 }
 
 .quote-text div {
-    font-family: Vollkorn;
+    font-family: Vollkorn, Arial, sans-serif;
     font-size: 16px;
     font-style: italic;
     line-height: 1.63;
@@ -642,7 +641,7 @@ h1 {
 
 .quote-text span {
     display: block;
-    font-family: "Open Sans";
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 16px;
     font-style: normal;
     line-height: 1.63;
@@ -660,7 +659,7 @@ h1 {
     max-width: 520px;
     margin: 0 auto;
     text-align: center;
-    font-family: Vollkorn;
+    font-family: Vollkorn, Arial, sans-serif;
     font-size: 32px;
     font-weight: bold;
     line-height: 1.5;
@@ -750,7 +749,7 @@ h1 {
 }
 
 .game-header {
-    font-family: Vollkorn;
+    font-family: Vollkorn, Arial, sans-serif;
     font-size: 32px;
     font-weight: bold;
     line-height: 1.75;
@@ -782,7 +781,7 @@ h1 {
 /*}*/
 
 .request-header {
-    font-family: Vollkorn;
+    font-family: Vollkorn, Arial, sans-serif;
     font-size: 32px;
     font-weight: bold;
     line-height: 1.75;
@@ -824,19 +823,22 @@ h1 {
     margin-bottom: 25px;
     border-radius: 5px;
     border: solid 1px #d0d7dd;
-    font-family: "Open Sans";
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 16px;
-    color: #989898;
+    color: transparent;
     padding: 12px 0 18px 23px;
     background: transparent;
 }
 
+.request-form:focus {
+    color: #989898;
+}
 
 .form-container span {
     position: absolute;
     z-index: -10;
     top: 0;
-    font-family: "Open Sans";
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 16px;
     color: #989898;
     padding: 12px 0 18px 23px;
@@ -846,7 +848,6 @@ h1 {
 .request-form:focus ~ span {
     font-size: 12px;
     padding: 0 7px 0 7px;
-    /*padding-left: 7px;*/
     top: -10px;
     left: 16px;
     z-index: 0;
@@ -902,7 +903,7 @@ h1 {
 .request-row .right ul {
     margin-top: 20px;
     list-style: url("../images/icons/svg/arrow_gray_right.svg") inside;
-    font-family: Roboto;
+    font-family: Roboto, Arial, sans-serif;
     font-size: 16px;
     color: #989898;
 }
@@ -926,7 +927,7 @@ h1 {
     border: none;
     border-radius: 5px;
     background-color: #4da1ff;
-    font-family: "Open Sans";
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 14px;
     font-weight: bold;
     letter-spacing: 0.5px;
@@ -935,7 +936,7 @@ h1 {
 
 .reg-p {
     margin-top: 16px;
-    font-family: "Open Sans";
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 16px;
     line-height: 1.75;
     color: #56666c;
@@ -944,7 +945,7 @@ h1 {
 }
 
 .place-header {
-    font-family: Vollkorn;
+    font-family: Vollkorn, Arial, sans-serif;
     font-size: 32px;
     font-weight: bold;
     line-height: 1.75;
@@ -954,7 +955,7 @@ h1 {
 }
 
 .place-p {
-    font-family: "Open Sans";
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 16px;
     line-height: 1.75;
     text-align: center;
@@ -981,14 +982,14 @@ h1 {
 }
 
 .contacts-row-title {
-    font-family: "Open Sans";
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 16px;
     /*font-weight: bold;*/
     color: #212121;
 }
 
 .contacts-row {
-    font-family: "Open Sans";
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 16px;
     color: #989898;
 }
@@ -998,7 +999,7 @@ h1 {
 }
 
 .partners-header {
-    font-family: Vollkorn;
+    font-family: Vollkorn, Arial, sans-serif;
     font-size: 32px;
     font-weight: bold;
     line-height: 1.75;
@@ -1037,7 +1038,7 @@ h1 {
 }
 
 .footer-p {
-    font-family: "Open Sans";
+    font-family: "Open Sans", Arial, sans-serifre;
     font-size: 16px;
     text-align: center;
     color: #989898;
